Add support for tape data input. Also resolve bug where clock tick count overflows and becomes negative causing cycle calculations to be incorrect and effectively halting processing for a while.

--- a/CPCSharp.Core/CPCSharp.Core.csproj
+++ b/CPCSharp.Core/CPCSharp.Core.csproj
@@ -14,4 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Z80Sharp\Z80\Z80.csproj" />
   </ItemGroup>
+    <ItemGroup>
+    <ProjectReference Include="..\..\CDTSharp\CDTSharp.Core\CDTSharp.Core.csproj" />
+  </ItemGroup>
 </Project>
