--- a/CPCSharp.App/CPCSharp.App.csproj
+++ b/CPCSharp.App/CPCSharp.App.csproj
@@ -17,6 +17,11 @@
     <ProjectReference Include="..\CPCSharp.Core\CPCSharp.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\NativeLibs\libMacPSG.dylib">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>  
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Avalonia" Version="0.9.12" />
     <PackageReference Include="Avalonia.Desktop" Version="0.9.12" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.9.12" />
