Squash a bunch of not useful github actions/build trial and error into one commit. End result of a working github workflow for creating mac & windows builds

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 NativeLibs/*
+BuildArtifacts/*
+NativePSGs/Mac/MacPSG/build/*
 
 # User-specific files
 *.rsuser
